- fixed critical bugs and small optimization